fix comments and tests
